<resources>

    <string name="app_name">Class Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_class_entry">ClassEntry</string>
    <string name="mainMenu_viewGradesButtonText">View Current Grades</string>
    <string name="mainMenu_editAssignmentsButtonText">Enter or Edit Assignments</string>
    <string name="mainMenu_editClassesButtonText">Enter or Edit Classes</string>
    <string name="mainMent_resetDataButtonText">Reset Data</string>
    <string name="mainMenu_headerText">Main Menu</string>
    <string name="mainMenu_dialogs_resetWarning_message">Are you sure you want to reset all data?</string>
    <string name="mainMenu_dialogs_enterEdit_newButtonText">Enter Assignment</string>
    <string name="mainMenu_dialogs_enterEdit_editButtonText">Edit Assignment</string>
    <string name="title_activity_assignment_entry">AssignmentEntry</string>
    <string name="title_activity_view_classes">ViewClasses</string>
    <string name="classEntry_titleTextView_text">Class Entry</string>
    <string name="classEntry_nameTextView_text">Name:</string>
    <string name="classEntry_addNewButton_text">Add Type</string>
    <string name="classEntry_dialogs_addNewTitle">Add Type</string>
    <string name="classEntry_dialogs_editTypeTitle">Edit Type</string>
    <string name="classEntry_dialogs_doesNotAddUp_message">The weightings of the assignment types add up to %d, not 100.</string>
    <string name="classEntry_dialogs_doesNotAddUp_title">Entry Error</string>
    <string name="classEntry_dialogs_assignmentTypeEntry_nameHint">Enter a name</string>
    <string name="classEntry_dialogs_assignmentTypeEntry_weightingLabel_text">Weighting:</string>
    <string name="classEntry_dialogs_assignmentTypeEntry_weightingHint">Enter a weighting</string>
    <string name="classEntry_dialogs_assignmentTypeEntry_noNameMessage">Please enter a class name.</string>
    <string name="classEntry_dialogs_assignmentTypeEntry_noTypesMessage">Please enter at least one assignment type.</string>
    <string name="classEntry_assignmentTypeAdapter_viewText">%1$s — %2$d%%</string>
    <string name="addEditAssignments_title">Select Class and Type</string>
    <string name="addEditAssignments_classSelectTitle">Class</string>
    <string name="addEditAssignments_typeSelectTitle">Assignment Type</string>
    <string name="addEditAssignments_dialogs_needTypeDialog_text">Please select a Class and Assignment Type</string>
    <string name="childDialogs_TypeEntryErrorTitle">Error in entry</string>
    <string name="childDialogs_TypeEntryErrorMessage">Please enter an integer between 1 and 100 for the weighting.</string>
    <string name="title_activity_assignment_select">AssignmentSelect</string>

</resources>