<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/addEditAssignments_titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/addEditAssignments_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/addEditAssignments_doneSelectingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:text="@string/done" />

    <ListView
        android:id="@+id/addEditAssignments_classSelectList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addEditAssignments_typeSelectTitle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addEditAssignments_selectClassClassTitle" >

    </ListView>

    <TextView
        android:id="@+id/addEditAssignments_typeSelectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/addEditAssignments_typeSelectTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/addEditAssignments_selectClassClassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addEditAssignments_titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/addEditAssignments_classSelectTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/addEditAssignments_typeSelectList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addEditAssignments_doneSelectingButton"
        android:layout_below="@+id/addEditAssignments_typeSelectTitle"
        android:layout_centerHorizontal="true" >

    </ListView>

</RelativeLayout>
